package treulo.src.view;

import treulo.src.model.Model;

public interface Observator {

    public void update(Model model);
}
